# tnt_deobfuscator

./: .gitignore  LICENSE  README.md  README.zh-CN.md  build_backend.py  pyproject.toml
scripts/: patch_unicorn_lib.sh
tnt_deobfuscator/: __init__.py  cli.py  ida_plugin.py  installer.py
